--- a/index.html
+++ b/index.html
@@ -5,20 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css"/>
 		<title>Wake me up</title>
-		
-		<script>
-		
-			function myFunction () {
-				var x = document.getElementById("myTopNav");
-				if (x.className === "navbar") {
-					x.className += " responsive";
-				} 	
-				else {
-					x.className = "navbar";
-				}
-			}
-
-		</script>
 	</head>
 	
 	<body>
@@ -50,7 +36,7 @@
 					<div class="innersidebox1">
 						<h1 id="1stsideboxh">My Osu! profile:</h1>
 						<center>
-							<a href="https://osu.ppy.sh/users/10017902"><img src="images/osuprofpic.png" id="profpic"/></a>
+							<a href="https://osu.ppy.sh/users/10017902" target="_blank"><img src="images/osuprofpic.png" id="profpic"/></a>
 							<p id="profilepara">Click on the picture above to view profile (if you're interested).</p>
 						</center>
 					</div>
@@ -62,14 +48,14 @@
 						<div class="YTcontainer">
 							<div class="YTcolumnL">
 								<p>osu! standard:</p>
-								<a href="https://www.youtube.com/watch?v=VsYLIg67pYo"><img src="images/YTfreedivelinkpic.jpg" id="freedivethumbnail"/></a>
-								<a href="https://www.youtube.com/watch?v=blHvgsGSUC8"><img src="images/YTmonobflypic.jpg" id="monobflythumbnail"/></a>
+								<a href="https://www.youtube.com/watch?v=VsYLIg67pYo" target="_blank"><img src="images/YTfreedivelinkpic.jpg" id="freedivethumbnail"/></a>
+								<a href="https://www.youtube.com/watch?v=blHvgsGSUC8" target="_blank"><img src="images/YTmonobflypic.jpg" id="monobflythumbnail"/></a>
 							</div>
 							
 							<div class="YTcolumnR">
 								<p>osu! mania:</p>
-								<a href="https://www.youtube.com/watch?v=BPo59AJyShE"><img src="images/YTfoolmoonpic.jpg" id="foolmoonthumbnail"/></a>
-								<a href="https://www.youtube.com/watch?v=EN090FsiNMk"><img src="images/YTascendheavenpic.jpg" id="ascendheaventhumbnail"/></a>
+								<a href="https://www.youtube.com/watch?v=BPo59AJyShE" target="_blank"><img src="images/YTfoolmoonpic.jpg" id="foolmoonthumbnail"/></a>
+								<a href="https://www.youtube.com/watch?v=EN090FsiNMk" target="_blank"><img src="images/YTascendheavenpic.jpg" id="ascendheaventhumbnail"/></a>
 							</div>
 						</div>
 					
@@ -79,6 +65,8 @@
 					</div>
 				</div>
 			</div>
+			
+			<script src="java.js"></script>
 		</div>
 	</body>
 </html>
