--- a/pages/leaderboards.html
+++ b/pages/leaderboards.html
@@ -5,20 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="../style.css"/>
 		<title>Game Leaderboards</title>
-		
-		<script>
-		
-			function myFunction () {
-				var x = document.getElementById("myTopNav");
-				if (x.className === "navbar") {
-					x.className += " responsive";
-				} 	
-				else {
-					x.className = "navbar";
-				}
-			}
-
-		</script>
 	</head>
 	
 	<body>
@@ -196,6 +182,9 @@
 				</div>
 				</center>
 			</div>
+			
+			<script src="../java.js">
+			</script>
 		</div>
 	</body>
 </html>
